small changes to storage api for debugging and small changes to experiment controller to run different experiments